Fixed strobing options popup CSS
The previous width was a bit too narrow, which caused chrome to enable scrollbars, then grow the window, then disable scrollbars. This caused a really bizarre strobing effect on the latest Chrome and Brave browsers. Increased the width a little to resolve the issue.

--- a/popup.css
+++ b/popup.css
@@ -1,6 +1,6 @@
 body {
 	padding: 20px;
-	min-width: 400px;
+	min-width: 450px;
 }
 .display_table {
 	width: 100%;
